...
) {
    Column(verticalArrangement = Arrangement.spacedBy(8.dp)) {
        OutlinedTextField(
            value = login,
            onValueChange = onLoginChange,
            label = { Text(stringResource(R.string.login_label)) },
            modifier = Modifier.fillMaxWidth().testTag("account_login").semantics { contentType = ContentType.Username },
            keyboardOptions = KeyboardOptions(autoCorrectEnabled = false, imeAction = ImeAction.Next),
            singleLine = true,
            enabled = enabled,
        )
        OutlinedTextField(
            value = password,
...
